TOG-4 add documentation
